tests/machine/x/fs/string_prefix_slice.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/string_prefix_slice.fs(5,24): error FS0001: This expression was expected to have type
    char    
but here has type
    string    

/workspace/mochi/tests/machine/x/fs/string_prefix_slice.fs(7,24): error FS0001: This expression was expected to have type
    char    
but here has type
    string    
