tests/machine/x/fs/string_prefix_slice.fs
open System

let prefix = "fore"
let s1 = "forest"
printfn "%A" (s1.[0] = prefix)
let s2 = "desert"
printfn "%A" (s2.[0] = prefix)
